ex4/testdata/typechecker/error/NestedVarsErr3.java
class MainClass{
    public static void main(String[] args){

    }
}

class A {
    int m(int x, int y) {
        int x;
        return 0;
    }
}